appv1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appv1
spec:
  selector:
    matchLabels:
      app: appv1
  replicas: 1
  template:
    metadata:
      labels:
        app: appv1
    spec:
      containers:
      - name: appv1
        image: nginx
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: appv1
  labels:
    app: appv1
spec:
  ports:
    - port: 80
      name: appv1
  selector:
    app: appv1
